--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  color: #f5f5f7;
 }
 
 .description {
@@ -25,6 +26,10 @@
   gap: 0.5rem;
 }
 
+.exampleClass {
+  font-family: 'Montserrat', 'Arial', 'sans-serif';
+}
+
 .description p {
   position: relative;
   margin: 0;
@@ -36,7 +41,7 @@
 
 .code {
   font-weight: 700;
-  font-family: var(--font-mono);
+  font-family: var(--font-mont);
 }
 
 .grid {
